src/test/deca/context/invalid/classextends1.deca
class A{

}
class B extends A{
    int a;
}
{
    A b=new A();
    b.a=5;
}